crates/kirin-interpreter/tests/snapshots/abstract_fixpoint__branch_fork_ir_snapshot.snap
---
source: crates/kirin-interpreter/tests/abstract_fixpoint.rs
expression: ir
---
specialize @0 fn @unnamed () -> i64 {
  ^0(%0: i64) {
    %3 = neg %0 -> i64;
    cond_br %0 then = ^1 (%3) else = ^2 (%0);
  }
  ^1(%1: i64) {
    ret %1;
  }
  ^2(%2: i64) {
    ret %2;
  }
}
