crates/kirin-interpreter/tests/snapshots/abstract_fixpoint__loop_convergence_ir_snapshot.snap
---
source: crates/kirin-interpreter/tests/abstract_fixpoint.rs
expression: ir
---
specialize @0 fn @unnamed () -> i64 {
  ^0(%0: i64) {
    br ^1 (%0);
  }
  ^1(%1: i64) {
    cond_br %1 then = ^3 (%1) else = ^2 (%1);
  }
  ^3(%3: i64) {
    %4 = constant 1 -> i64;
    %5 = add %3, %4 -> i64;
    br ^1 (%5);
  }
  ^2(%2: i64) {
    ret %2;
  }
}
